# scroller-doc-to-md

./: .gitignore  README.md  documentation_complete-github-copilot.md  documentation_github_copilot.md  pyproject.toml  requirements.txt  script.py  test.txt
extract/: documentation_github_copilot.md  githubactions.md
extract/githubactions_tree/: about-github-actions.md  administering-github-actions.md  guides.md  hosting-your-own-runners.md  index.md  managing-workflow-runs-and-deployments.md  migrating-to-github-actions.md  monitoring-and-troubleshooting-workflows.md  security-for-github-actions.md  sharing-automations.md  support.md  use-cases-and-examples.md  using-github-hosted-runners.md  using-nbc-runners.md  writing-workflows.md
extract/githubactions_tree/hosting-your-own-runners/: managing-self-hosted-runners-with-actions-runner-controller.md  managing-self-hosted-runners.md
extract/githubactions_tree/managing-workflow-runs-and-deployments/: managing-deployments.md  managing-workflow-runs.md
extract/githubactions_tree/migrating-to-github-actions/: manually-migrating-to-github-actions.md  using-github-actions-importer-to-automate-migrations.md
extract/githubactions_tree/monitoring-and-troubleshooting-workflows/: monitoring-workflows.md  troubleshooting-workflows.md
extract/githubactions_tree/security-for-github-actions/: security-guides.md  security-hardening-your-deployments.md  using-artifact-attestations.md
extract/githubactions_tree/sharing-automations/: creating-actions.md
extract/nbc-actions/: faq.md  support.md
src/: script.py
(+11 files in other folders)
